--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.14.0",
     "lucide-react": "^0.511.0",
-    "next": "15.3.4",
+    "next": "^15.5.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
